<resources>
    <string name="app_name">ControlSystem</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_new_confirm_password">Confirm New Password</string>
    <string name="action_change_pass">Change Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This user name is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_change">Password change is not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="list_of_nodes_in_system">List of nodes in System </string>
    <string name="scan">Scan</string>
    <string name="detail">Detail</string>
    <string name="update">UPDATE FUNCTION</string>
    <string name="remove">REMOVE</string>
    <string name="list_of_functions_in_node">List of functions in a node</string>
    <string name="actionbar_load">Load</string>
    <string name="actionbar_save">Save</string>
    <string name="actionbar_clear">Clear</string>
    <string name="actionbar_run">Run</string>
    <string name="title_systemelement_list">SystemElements</string>
    <string name="title_systemelement_detail">SystemElement Detail</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="title_activity_user_detail">UserDetailActivity</string>
    <string name="change_pass">Change Password</string>
    <string name="log_out">Log out</string>
    <string name="welcome_txt">Welcome</string>
    <string name="update_func_name">Update Name</string>
    <string name="add_funcion">Add Function</string>
    <string name="edit_txt">Edit</string>
    <string name="cancel_txt">Cancel</string>
    <string name="change_id_msg">ID length = 4 only</string>
    <string name="gen_code_error_msg">Something went wrong with code generation.</string>
    <string name="gen_code_txt">Generated code</string>
</resources>
